juno/qa/apps/fhir-console/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fhir-console
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      http2_max_header_size 100k;
      http2_max_field_size 8k;
      client_header_buffer_size 100k;
      large_client_header_buffers 4 100k;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - fhir-console.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: fhir-console.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fhir-console
                port:
                  number: 8080
